other-cel/prevent-bare-pods/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prevent-naked-pods-ns
