other-cel/prevent-bare-pods/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: gooddeployment01
    uid: "foo-bar"
  name: goodpod01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
