other-cel/prevent-bare-pods/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-bare-pods
status:
  ready: true
